// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CSAccounting event tests 🔴 CSAccounting: Bond Curve Set 1`] = `
[
  {
    "array": [
      "ethereum",
      4,
      [],
      4,
      "CS-ACCOUNTING-BOND-CURVE-SET",
      "🔴 CSAccounting: Bond curve set",
      "Bond curve set for node operator ID 204 with curve ID 3",
      ,
      ,
      [],
      ,
      [],
      [],
    ],
    "arrayIndexOffset_": -1,
    "convertedPrimitiveFields_": {},
    "messageId_": undefined,
    "pivot_": 1.7976931348623157e+308,
    "wrappers_": {
      "3": {
        "arrClean": false,
        "arr_": [],
        "map_": {
          "args": {
            "key": "args",
            "value": "204,3",
            "valueWrapper": undefined,
          },
        },
        "valueCtor_": null,
      },
    },
  },
]
`;

exports[`CSAccounting event tests 🔴 CSAccounting: Bond Curve added, stETH Approval 1`] = `
[
  {
    "array": [
      "ethereum",
      4,
      [],
      4,
      "CS-ACCOUNTING-BOND-CURVE-ADDED",
      "🔴 CSAccounting: Bond curve added",
      "Bond curve added: [2.000 ETH, 3.900 ETH, 5.700 ETH, 7.400 ETH, 9.000 ETH, 10.500 ETH]",
      ,
      ,
      [],
      ,
      [],
      [],
    ],
    "arrayIndexOffset_": -1,
    "convertedPrimitiveFields_": {},
    "messageId_": undefined,
    "pivot_": 1.7976931348623157e+308,
    "wrappers_": {
      "3": {
        "arrClean": false,
        "arr_": [],
        "map_": {
          "args": {
            "key": "args",
            "value": "2000000000000000000,3900000000000000000,5700000000000000000,7400000000000000000,9000000000000000000,10500000000000000000",
            "valueWrapper": undefined,
          },
        },
        "valueCtor_": null,
      },
    },
  },
  {
    "array": [
      "ethereum",
      1,
      ,
      4,
      "STETH-APPROVAL",
      "🔵 Lido stETH: Approval",
      "0x8d09a4502Cc8Cf1547aD300E066060D043f6982D received allowance from 0xc093e53e8F4b55A223c18A2Da6fA00e60DD5EFE1 to 115792089237316195423570985008687907853269984665640564039457584007913129639935",
      ,
      ,
      [],
      ,
      [],
      [],
    ],
    "arrayIndexOffset_": -1,
    "convertedPrimitiveFields_": {},
    "messageId_": undefined,
    "pivot_": 1.7976931348623157e+308,
    "wrappers_": null,
  },
  {
    "array": [
      "ethereum",
      1,
      ,
      4,
      "STETH-APPROVAL",
      "🔵 Lido stETH: Approval",
      "0xc7cc160b58F8Bb0baC94b80847E2CF2800565C50 received allowance from 0xc093e53e8F4b55A223c18A2Da6fA00e60DD5EFE1 to 115792089237316195423570985008687907853269984665640564039457584007913129639935",
      ,
      ,
      [],
      ,
      [],
      [],
    ],
    "arrayIndexOffset_": -1,
    "convertedPrimitiveFields_": {},
    "messageId_": undefined,
    "pivot_": 1.7976931348623157e+308,
    "wrappers_": null,
  },
  {
    "array": [
      "ethereum",
      1,
      ,
      4,
      "STETH-APPROVAL",
      "🔵 Lido stETH: Approval",
      "0x4E46BD7147ccf666E1d73A3A456fC7a68de82eCA received allowance from 0xc093e53e8F4b55A223c18A2Da6fA00e60DD5EFE1 to 115792089237316195423570985008687907853269984665640564039457584007913129639935",
      ,
      ,
      [],
      ,
      [],
      [],
    ],
    "arrayIndexOffset_": -1,
    "convertedPrimitiveFields_": {},
    "messageId_": undefined,
    "pivot_": 1.7976931348623157e+308,
    "wrappers_": null,
  },
]
`;

exports[`CSAccounting event tests 🚨 CSAccounting: Bond Curve Updated 1`] = `
[
  {
    "array": [
      "ethereum",
      5,
      [],
      4,
      "CS-ACCOUNTING-BOND-CURVE-UPDATED",
      "🚨 CSAccounting: Bond curve updated",
      "Bond curve updated with curve ID 3. Bond curve: [4.000 ETH, 5.000 ETH, 6.000 ETH, 7.000 ETH]",
      ,
      ,
      [],
      ,
      [],
      [],
    ],
    "arrayIndexOffset_": -1,
    "convertedPrimitiveFields_": {},
    "messageId_": undefined,
    "pivot_": 1.7976931348623157e+308,
    "wrappers_": {
      "3": {
        "arrClean": false,
        "arr_": [],
        "map_": {
          "args": {
            "key": "args",
            "value": "3,4000000000000000000,5000000000000000000,6000000000000000000,7000000000000000000",
            "valueWrapper": undefined,
          },
        },
        "valueCtor_": null,
      },
    },
  },
]
`;

exports[`CSAccounting event tests 🚨 CSAccounting: Charge Penalty Recipient Set 1`] = `
[
  {
    "array": [
      "ethereum",
      5,
      [],
      4,
      "CS-ACCOUNTING-CHARGE-PENALTY-RECIPIENT-SET",
      "🚨 CSAccounting: Charge penalty recipient set",
      "Charge penalty recipient set to [0xE92329EC7ddB11D25e25b3c21eeBf11f15eB325d](https://etherscan.io/address/0xE92329EC7ddB11D25e25b3c21eeBf11f15eB325d) (expecting the treasury)",
      ,
      ,
      [],
      ,
      [],
      [],
    ],
    "arrayIndexOffset_": -1,
    "convertedPrimitiveFields_": {},
    "messageId_": undefined,
    "pivot_": 1.7976931348623157e+308,
    "wrappers_": {
      "3": {
        "arrClean": false,
        "arr_": [],
        "map_": {
          "args": {
            "key": "args",
            "value": "0xE92329EC7ddB11D25e25b3c21eeBf11f15eB325d",
            "valueWrapper": undefined,
          },
        },
        "valueCtor_": null,
      },
    },
  },
]
`;
